--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="w-full container mx-auto">
         <div class="w-full flex items-center justify-between">
           <a class="flex items-center text-indigo-400 no-underline hover:no-underline font-fugaz text-2xl lg:text-4xl" href="#">
-            BAG<span class="bg-clip-text text-transparent bg-gradient-to-r from-green-400 via-pink-500 to-purple-500">STIV</span>
+            BAG<span class="bg-clip-text text-transparent bg-gradient-to-r from-green-400 via-pink-500 to-purple-500" style="width: 90px;">STIV</span>
           </a>
         </div>
       </div>
