Added updated link

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="" />
     
     <link rel="stylesheet" href="tailwind.config.css"/>
-    <!--Replace with your tailwind.css once created-->
+    <!--Test with your tailwind.css once created-->
 
   </head>
 
@@ -29,14 +29,14 @@
         <!--Left Col-->
         <div class="flex flex-col w-full xl:w-2/5 justify-center lg:items-start overflow-y-hidden">
           <h1 class="my-4 text-3xl md:text-5xl text-white opacity-75 font-bold leading-tight text-center md:text-left">
-            Bæredygtig
+            Bæredygtige
             <span class="bg-clip-text text-transparent bg-gradient-to-r from-green-400 via-pink-500 to-purple-500">
-              alkoholsodavand
+              drinks
             </span>
             på den sjove måde
           </h1>
           <p class="leading-normal text-base md:text-2xl mb-8 text-center md:text-left">
-            BAGSTIV er alkohol, bæredytigt fremstillet og til <a href="https://youtu.be/_D2pq_enSo4?t=109">rimelige</a> priser 
+            BAGSTIV er alkohol, bæredygtigt fremstillet og til <a href="https://youtu.be/_D2pq_enSo4?t=109">rimelige</a> priser 
           </p>
 
           <form class="bg-gray-900 opacity-75 w-full shadow-lg rounded-lg px-8 pt-6 pb-8 mb-4">
@@ -56,7 +56,7 @@
             <a
             class="bg-gradient-to-r from-purple-800 to-green-500 hover:from-pink-500 hover:to-green-500 text-white font-bold py-2 px-4 rounded focus:ring transform transition hover:scale-105 duration-300 ease-in-out"
             type="button"
-            href="https://www.google.com/maps/d/embed?mid=1ndQ-fDxuLLYijFXmRazx9FbGHkNGMp5S&ehbc=2E312F">
+            href="https://www.google.com/maps/d/u/0/viewer?mid=1wIgWlhRZf7GPGjEc-InW6Mbx8iGS4uc">
             Find barer der sælger BAGSTIV
         </a>
             </div>
