--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
               <a
                 class="bg-gradient-to-r from-purple-800 to-green-500 hover:from-pink-500 hover:to-green-500 text-white font-bold py-2 px-4 rounded focus:ring transform transition hover:scale-105 duration-300 ease-in-out"
                 type="button"
-                href="https://www.instagram.com/bagstivdk/">
+                href="https://www.instagram.com/bagstivnu/">
                 Skriv for pokker!
             </a>
             <a
